# menshen

./: .gitignore  .gitlint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Tiltfile  compose.yml  index.yaml  menshen-0.1.0.tgz  menshen-0.1.1.tgz  publiccode.yml  renovate.json
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  Support_question.md
.github/workflows/: _docker-publish.yml  backend.yml  client.yml  docker-hub.yml  helm.yml  python-packages.yml  release-helm-chart.yml  security.yml
docker/auth/: realm.json
env.d/development/: common  kc_postgresql  postgresql
src/backend/: Dockerfile  manage.py  pyproject.toml
src/backend/api/: urls.py  views.py
src/backend/api/tests/: test_views.py
src/backend/apps/tx/: admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  token_generator.py  urls.py
src/backend/apps/tx/tests/: conftest.py  test_views.py
src/backend/demo/: forms.py
src/backend/demo/management/commands/: __init__.py  create_demo.py  createsuperuser.py
src/backend/menshen/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/token_exchange/: admin.py  api.py  apps.py  authentication.py  enums.py  exceptions.py  factories.py  models.py  permissions.py  schemas.py  serializers.py  structs.py  token_generator.py  urls.py  views.py
src/backend/token_exchange/migrations/: 0001_initial.py  0002_alter_exchangedtoken_token.py
src/backend/token_exchange/services/: introspection.py  mixins.py  request.py  revocation.py  token.py
src/backend/token_exchange/tests/: conftest.py  test_api.py  test_models.py  test_schemas.py  test_structs.py  test_token_generator.py  test_views.py
src/backend/token_exchange/tests/services/: test_introspection.py  test_mixins.py  test_request.py  test_revocation.py  test_token.py
src/backend/token_exchange/tests/test_services/: test_introspection.py  test_request.py  test_revocation.py
src/client/: CHANGELOG.md  README.md  pyproject.toml
src/client/menshen_client/: __init__.py  client.py  enums.py  exceptions.py  schemas.py
src/client/tests/: conftest.py  test_client.py  test_schemas.py
src/helm/: helmfile.yaml.gotmpl
src/helm/env.d/dev/: values.dev-backend.yaml.gotmpl  values.menshen.yaml.gotmpl
src/helm/menshen/: Chart.yaml  README.md  values.yaml
src/helm/menshen/templates/: _helpers.tpl  backend_deployment.yaml  backend_job.yml  backend_job_createsuperuser.yaml  backend_job_migrate.yaml  backend_svc.yaml  ingress.yaml  ingress_admin.yaml
src/playground/source/: Dockerfile  manage.py  pyproject.toml
src/playground/source/apps/auth/: backends.py
src/playground/source/apps/core/: admin.py  forms.py  models.py  urls.py  views.py
src/playground/source/apps/core/fixtures/: recordings.json
src/playground/source/apps/core/migrations/: 0001_initial.py
src/playground/source/apps/core/templates/core/: main.html
src/playground/source/source/: asgi.py  settings.py  urls.py  wsgi.py
src/playground/source/static/css/: styles.css
src/playground/source/templates/: base.html
