#
# menshen package
#
[build-system]
requires = ["uv_build>=0.10.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "menshen"
version = "0.1.0"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Framework :: Django :: 6",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
description = "An OAuth 2.0 Token Exchange autorization server build with Django."
keywords = ["Django", "OAuth"]
license = "MIT"
requires-python = "~=3.14.3"
dependencies = [
    "dj-database-url==3.1.2",
    "django==6.0.4",
    "django-configurations==2.5.1",
    "django-cors-headers==4.9.0",
    "django-lasuite[all]==0.0.26",
    "django-redis==6.0.0",
    "djangorestframework==3.17.1",
    "dockerflow==2026.3.4",
    "drf-spectacular==0.29.0",
    "drf-standardized-errors==0.15.0",
    "msgspec==0.21.1",
    "psycopg[binary]==3.3.3",
    "sentry-sdk==2.58.0",
    "whitenoise==6.12.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/suitenumerique/menshen/issues/new"
"Changelog" = "https://github.com/suitenumerique/menshen/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/suitenumerique/menshen"
"Repository" = "https://github.com/suitenumerique/menshen"

[dependency-groups]
dev = [
    "django-debug-toolbar==6.3.0",
    "django-extensions==4.1",
    "django-types==0.24.0",
    "factory-boy==3.3.3",
    "ipdb==0.13.13",
    "ipython==9.12.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.11",
    "ty==0.0.37",
]

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/tests.py",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["migrations"]
lint.select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-logging-format
    "G",
    # flake8-pie
    "PIE",
    # flake8-comprehensions
    "C4",
    # flake8-django
    "DJ",
    # flake8-bandit
    "S",
    # flake8-builtins
    "A",
    # flake8-datetimez
    "DTZ",
    # flake8-gettext
    "INT",
    # Pylint
    "PL",
    # flake8-fixme
    "FIX",
    # flake8-self
    "SLF",
    # flake8-return
    "RET",
    # pep8-naming (N)
    "N",
    # pydocstyle
    "D",
    # flake8-pytest-style (PT)
    "PT",
]
lint.ignore = [
    # undocumented-magic-method
    "D105",
    # incorrect-blank-line-before-class
    "D203",
    # missing-blank-line-after-summary
    "D205",
    # multi-line-summary-first-line
    "D212",
]
lint.per-file-ignores = { "**/tests/*" = [
    # flake8-bandit
    "S",
    # flake8-self
    "SLF",
    # magic-value-comparison
    "PLR2004",
  ], "__init__.py" = [
    # Missing docstring in public package
    "D104"
]}

[tool.coverage.run]
omit = [
  "token_exchange/migrations/*",
  "token_exchange/tests/*",
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    "--cov",
    "token_exchange",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
